delete apis for geo features
